--- a/l10n_py_invoice_document/static/description/index.html
+++ b/l10n_py_invoice_document/static/description/index.html
@@ -374,6 +374,44 @@ ul.auto-toc {
 <li>Gestion de timbrados</li>
 <li>Agregado de datos necesarios a los formularios como ser Facturas, Contactos, Diarios, etc.</li>
 </ul>
+<p><strong>Tipos de cliente</strong></p>
+<p>El tipo de cliente se define en el partner, cada tipo de cliente tiene reglas
+para decidir si el ruc es obligatorio y ademas define los ruc consolidados y si
+se usa para compra o para venta.</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="12%" />
+<col width="19%" />
+<col width="16%" />
+<col width="19%" />
+<col width="16%" />
+<col width="19%" />
+</colgroup>
+<tbody valign="top">
+<tr><td colspan="2">&nbsp;</td>
+<td colspan="3">RUC</td>
+<td>&nbsp;</td>
+</tr>
+<tr><td>Aplica a</td>
+<td>Tipo</td>
+<td>Oblig indiv</td>
+<td>Oblig empresa</td>
+<td>Consolidado</td>
+<td>Cuenta predet</td>
+</tr>
+<tr><td>Venta</td>
+<td>Cliente Local</td>
+<td>NO</td>
+<td>SI</td>
+<td>123456-0</td>
+<td>10.25.33.120</td>
+</tr>
+</tbody>
+</table>
+<p>Por otro lado se definen cuentas contables predeterminadas, si la cuenta esta
+en blanco funciona en forma standard, si tiene una cuenta, toma esa cuenta.</p>
+<p>Las cuentas se usan en dos lugares, cuando se hace una factura y cuando se
+hace un pago.</p>
 <div class="admonition important">
 <p class="first admonition-title">Important</p>
 <p class="last">This is an alpha version, the data model and design can change at any time without warning.
@@ -448,7 +486,7 @@ If you spotted it first, help us smashing it by providing a detailed and welcome
 <div class="section" id="authors">
 <h2><a class="toc-backref" href="#id11">Authors</a></h2>
 <ul class="simple">
-<li>TecnoproPy</li>
+<li>Tecnopro</li>
 </ul>
 </div>
 <div class="section" id="contributors">
@@ -459,7 +497,7 @@ If you spotted it first, help us smashing it by providing a detailed and welcome
 </div>
 <div class="section" id="other-credits">
 <h2><a class="toc-backref" href="#id13">Other credits</a></h2>
-<p>Tecnoprop</p>
+<p>Tecnopro</p>
 </div>
 <div class="section" id="maintainers">
 <h2><a class="toc-backref" href="#id14">Maintainers</a></h2>
