--- a/l10n_py_reports/static/description/index.html
+++ b/l10n_py_reports/static/description/index.html
@@ -371,6 +371,7 @@ ul.auto-toc {
 <p>Implementa la impresion de documentos en la localizacion</p>
 <ul class="simple">
 <li>Facturas, notas de credito</li>
+<li>Recibos</li>
 </ul>
 <p><strong>Table of contents</strong></p>
 <div class="contents local topic" id="contents">
