--- a/l10n_py_invoice_document/static/description/index.html
+++ b/l10n_py_invoice_document/static/description/index.html
@@ -412,7 +412,7 @@ ul.auto-toc {
 <p>Luego en el partner se define el tipo de cliente o de proveedor, y se utilizan las reglas para determinar si el ruc
 es requerido o no dependiendo si es un individuo o una empresa.
 Si el ruc esta en blanco y la regla lo permite se usa el ruc consolidado para la factura y el libro de iva</p>
-<p>Por otro lado se definen cuentas contables predeterminadas, para las compras y las ventas segun el caso.</p>
+<p>Ademas se definen cuentas contables predeterminadas, para las compras y las ventas segun el caso.</p>
 <p><strong>Table of contents</strong></p>
 <div class="contents local topic" id="contents">
 <ul class="simple">
