[FIX] Mejoras en Recibos #111     - redibujamos el recibo     - Empezamos a escribir todo en ingles.     - agregamos recurso de traduccion es_py     - intento de crar un wizard para modificar el nro de secuencia pero al final se puede hacer con el receiptbook, Hay que quitar el codigo del quizard     - Se agregan a tipos de documento los documentos dc_receipt, dc_cash_receipt, dc_payment_order     - Compras y ventas pueden estar deshabilitados al mismo tiempo porque       un recibo no debe salir como documento ni en compras ni en ventas,       asi que se quita la constraint.     - se agrega el modelo account.payment.receiptbook y sus vistas asociadas     - En formulario de pagos aparece receipbook solo al recibir dinero, al enviar dinero selecciona la       orden de pago por defecto.     - se crea un receiptbook por defecto para pagos a proveedores     - hay que dejar el modelo report.receiptbook para eliminarlo despues sino falla el build. (?)     - migracion para solucionar los pagos ya hechos.

--- a/l10n_py_invoice_document/static/description/index.html
+++ b/l10n_py_invoice_document/static/description/index.html
@@ -441,6 +441,7 @@ formulario de <em>Categoria de producto</em>.</p>
 </div>
 <div class="section" id="installation">
 <h1><a class="toc-backref" href="#id1">Installation</a></h1>
+<p>This module is auto installed</p>
 </div>
 <div class="section" id="configuration">
 <h1><a class="toc-backref" href="#id2">Configuration</a></h1>
