[FIX] Mostrar proximo numero de factura #119
  Cuando se crea una factura en borrador al momento
  de definirse el timbrado, se muestra cual sera el
  proximo numero para poder cotejar con el formulario
  preimpreso que ya viene numerado.

--- a/l10n_py_invoice_document/static/description/index.html
+++ b/l10n_py_invoice_document/static/description/index.html
@@ -445,10 +445,18 @@ formulario de <em>Categoria de producto</em>.</p>
 <div class="section" id="configuration">
 <h1><a class="toc-backref" href="#id2">Configuration</a></h1>
 <p>To configure this module:</p>
-<p>Go to Account / Stamped Management
-- Add the stamped provided by SAT</p>
-<p>Go to Accounting / Configuration / Invoices / Journals
-- On the Sales and Purchaces journals check “Use Documents”</p>
+<dl class="docutils">
+<dt>Go to Account / Stamped Management</dt>
+<dd><ul class="first last simple">
+<li>Add the stamped provided by SAT</li>
+</ul>
+</dd>
+<dt>Go to Accounting / Configuration / Invoices / Journals</dt>
+<dd><ul class="first last simple">
+<li>On the Sales and Purchaces journals check “Use Documents”</li>
+</ul>
+</dd>
+</dl>
 </div>
 <div class="section" id="bug-tracker">
 <h1><a class="toc-backref" href="#id3">Bug Tracker</a></h1>
